# TRC3000

./: CMakeCache.txt  CMakeLists.txt  README.md  all  all.cpp  blob.cpp  blob.h
LaunchPad/: LED Control With Interrupt.txt
LaunchPad/IMU/: imu.c
LaunchPad/IMU/Header Files/: LSM6DS33.h
LaunchPad/IMU/IMU BackChannel V3/: .ccsproject  .cproject  .project  BCUart.h  LSM6DS0_Platform.h  i2c_msp430f5529.c  i2c_msp430f5529.h  main.c  mpu6050.h  msp6050.c
LaunchPad/Interrupt/: General Interrupt Template.txt
LaunchPad/PID Controller/: PID Control Source code.txt  PID Controll Prototype.txt  Thoughts on PID.txt  Working PID control.txt
LaunchPad/PWM Functionality [Solved]/: Basic LED control.txt  PWM duty cycle control with LED control.txt  PWM duty cycle control.txt  Toggle PWM.txt
LaunchPad/Quadrature Encoder & RPM caculation/: Original thoughts.txt
LaunchPad/Serial-Oscilloscope-v1.5/: TXT.txt
LaunchPad/Serial-Oscilloscope-v1.5/Oscilloscope/: Oscilloscope_settings.ini
LaunchPad/UART/: Uart Working Prototype.txt
LaunchPad/USB Backchannel[Work in Progress]/: 8MHZ 15200Baud .txt  PWM Backchannel.txt
RPi/: CMakeLists.txt  Open_image_using_opencv.txt  final_image_processing.txt  nav with filter.txt  nav.txt  thresholding.txt  uart_comm.txt  video_playback.txt  video_stream.txt
old/: colour  colourdetection.cpp  ocv_1.cpp  receive  receive.cpp  serial  thresholding  thresholding.cpp  uart2  uart2.cpp  uartpyth.py  video_playback.cpp  video_stream  video_stream.cpp  video_stream_2.cpp  video_stream_pyth.py
pcDuino/examples/SPI/: spi_test.h
(+103 files in other folders)
